added drug add page

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 #root{
   overflow-x: hidden;
 }
+/* 
+::-webkit-datetime-edit-year-field:not([aria-valuenow]),
+::-webkit-datetime-edit-month-field:not([aria-valuenow]),
+::-webkit-datetime-edit-day-field:not([aria-valuenow]) {
+    color: transparent !important;
+    display: none !important; 
+} */
