404 page, view all couples page, add new couples, fixed footer not sticking to bottom

--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,15 @@
   @apply bg-white dark:bg-dark-background;
 }
 
+.content-container{
+  min-height: calc(100vh - 145px);
+  @apply p-12 pt-8;
+}
+
+.eligible-form{
+  grid-template-columns: 1fr 2fr 2fr;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
