--- a/src/index.css
+++ b/src/index.css
@@ -136,3 +136,9 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.popup-content {
+  background: none;
+  border: none;
+  width: 25%;
+}
